rocket-db/core/codegen/tests/ui-fail-nightly/catch.stderr
error: expected `fn`
 --> $DIR/catch.rs:6:1
  |
6 | struct Catcher(String);
  | ^^^^^^
  |
  = help: `#[catch]` can only be used on functions

error: expected `fn`
 --> $DIR/catch.rs:9:7
  |
9 | const CATCH: &str = "Catcher";
  |       ^^^^^
  |
  = help: `#[catch]` can only be used on functions

error: expected integer or `default`, found string literal
  --> $DIR/catch.rs:11:9
   |
11 | #[catch("404")]
   |         ^^^^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error: unexpected keyed parameter: expected literal or identifier
  --> $DIR/catch.rs:14:9
   |
14 | #[catch(code = "404")]
   |         ^^^^^^^^^^^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error: unexpected keyed parameter: expected literal or identifier
  --> $DIR/catch.rs:17:9
   |
17 | #[catch(code = 404)]
   |         ^^^^^^^^^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error: status must be in range [100, 599]
  --> $DIR/catch.rs:20:9
   |
20 | #[catch(99)]
   |         ^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error: status must be in range [100, 599]
  --> $DIR/catch.rs:23:9
   |
23 | #[catch(600)]
   |         ^^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error: unexpected attribute parameter: `message`
  --> $DIR/catch.rs:26:14
   |
26 | #[catch(400, message = "foo")]
   |              ^^^^^^^^^^^^^^^
   |
   = help: `#[catch]` expects a status code int or `default`: `#[catch(404)]` or `#[catch(default)]`

error[E0308]: mismatched types
  --> $DIR/catch.rs:30:17
   |
30 | fn f3(_request: &Request, other: bool) { }
   |                 ^^^^^^^^ expected `&rocket::Request<'_>`, found struct `Status`

error[E0308]: mismatched types
  --> $DIR/catch.rs:30:34
   |
30 | fn f3(_request: &Request, other: bool) { }
   |                                  ^^^^ expected `bool`, found `&rocket::Request<'_>`
